--- a/app/src/main/res/layout/map_filters.xml
+++ b/app/src/main/res/layout/map_filters.xml
@@ -5,7 +5,7 @@
         android:id="@+id/filter_chips_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="64dp"
         android:layout_marginEnd="56dp"
         android:layout_marginTop="4dp"
         android:layout_gravity="top"
@@ -13,7 +13,7 @@
         app:chipSpacingHorizontal="8dp">
 
     <com.google.android.material.chip.Chip
-            style="@style/CustomChipChoice"
+            style="@style/CustomChipChoiceBus"
             android:id="@+id/bus_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             app:chipIcon="@drawable/animation_chip"/>
 
     <com.google.android.material.chip.Chip
-            style="@style/CustomChipChoice"
+            style="@style/CustomChipChoiceTram"
             android:id="@+id/tram_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             app:chipIcon="@drawable/animation_chip"/>
 
     <com.google.android.material.chip.Chip
-            style="@style/CustomChipChoice"
+            style="@style/CustomChipChoiceRural"
             android:id="@+id/rural_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
