--- a/app/src/main/res/layout/map_extra_controls.xml
+++ b/app/src/main/res/layout/map_extra_controls.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/map_types_map"
-        android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map_types_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="end|bottom"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="24dp"
-        android:layout_gravity="end|bottom">
+        android:layout_marginBottom="0dp"
+        android:orientation="vertical">
 
     <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-            style="@style/Widget.AppCompat.ImageButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
             android:id="@+id/traffic_button"
-            android:src="@drawable/ic_traffic_black_24dp"
-            android:contentDescription="@string/traffic_layer_description"
-            android:background="@drawable/mapbutton_background"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
             style="@style/Widget.AppCompat.ImageButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_margin="8dp"
+            android:background="@drawable/mapbutton_background"
+            android:contentDescription="@string/traffic_layer_description"
+            android:src="@drawable/ic_traffic_black_24dp" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/map_type_button"
-            android:src="@drawable/ic_satellite_black_24dp"
+            style="@style/Widget.AppCompat.ImageButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/mapbutton_background"
             android:contentDescription="@string/map_type_description"
-            android:background="@drawable/mapbutton_background"/>
+            android:src="@drawable/ic_satellite_black_24dp" />
 
 </LinearLayout>
