Added rural trackings selector for the map to quickly find and zoom into specific rural trackings. Improved filter chips state readability. Introduced some changes to clustering system to fix rendering bug when swapping filters too quickly

--- a/app/src/main/res/layout/map_trackings_control.xml
+++ b/app/src/main/res/layout/map_trackings_control.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/map_tracker_layout"
+        android:id="@+id/map_trackings_layout"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="48dp"
             android:layout_margin="8dp"
             android:visibility="gone"
-            android:id="@+id/map_tracker_button"
+            android:id="@+id/map_trackings_button"
             android:src="@drawable/ic_track_black_24dp"
             android:contentDescription="@string/map_type_description"
             android:background="@drawable/mapbutton_background"/>
