--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -46,9 +46,8 @@
             android:columnCount="4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
             android:id="@+id/lines_layout_favorite"
@@ -68,10 +67,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/number_text_info_window"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_text_info_window"
             android:layout_marginEnd="8dp"
             android:textAlignment="textEnd"
             app:layout_constraintStart_toEndOf="@+id/lines_layout_favorite"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_weight="0"/>
 
