Added rural bus stops and lines, added new initial data, added localized name for lines, added main lines and alternative lines systems to support alternative routes, added rules to fix inconsistent line identifiers between services, minor fixes

--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -18,10 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <!-- TODO FIX THIS WIDTH STUFF-->
         <TextView
                 android:id="@+id/line_text"
                 android:textColor="@color/kinda_white"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
+                android:minWidth="100dp"
                 android:layout_height="82dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
