--- a/app/src/main/res/layout/notification_destination_row_rural.xml
+++ b/app/src/main/res/layout/notification_destination_row_rural.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-            android:background="@color/tram_color"
+            android:background="@color/rural_color"
             android:id="@+id/notification_line_text"
             android:textColor="#ECECEC"
             android:layout_width="50dp"
