--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/no_favorites_animation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:lottie_rawRes="@raw/favorites_lottie"
+                app:lottie_rawRes="@raw/lottie_favorites"
                 app:lottie_loop="true"
                 app:lottie_autoPlay="true"
                 app:lottie_scale="0.3"
