--- a/app/src/main/res/layout/web_view_destination.xml
+++ b/app/src/main/res/layout/web_view_destination.xml
@@ -37,7 +37,7 @@
                 android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:lottie_rawRes="@raw/loading_lottie"
+                app:lottie_rawRes="@raw/lottie_loading"
                 app:lottie_loop="true"
                 app:lottie_autoPlay="true"
                 android:scaleType="centerCrop"
