--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.card.MaterialCardView
-        xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         app:cardElevation="4dp"
         tools:context=".MainActivity">
 
@@ -20,65 +19,102 @@
 
         <TextView
                 android:id="@+id/line_text"
-                android:textColor="@color/kinda_white"
                 android:layout_width="wrap_content"
-                android:minWidth="100dp"
                 android:layout_height="82dp"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textSize="60dp"
-                tools:ignore="SpUsage"
+                android:gravity="center"
+                android:minWidth="100dp"
                 android:textAlignment="center"
-                />
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textColor="@color/kinda_white"
+                android:textSize="60dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="SpUsage" />
 
         <TextView
-                android:gravity="center"
                 android:id="@+id/destination_text"
-                android:textColor="?colorOnSurface"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
-                android:textSize="19sp"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toTopOf="@+id/first_time_text"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:gravity="center"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textColor="?colorOnSurface"
+                android:textSize="19sp"
+                app:layout_constraintBottom_toTopOf="@+id/first_time_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
                 android:id="@+id/first_time_text"
-                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/destination_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
+                android:layout_marginTop="6dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                app:layout_constraintHorizontal_bias="0.5"
+                android:textColor="?colorOnSurface"
                 app:layout_constraintBottom_toTopOf="@+id/second_time_text"
-                android:layout_marginTop="6dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintTop_toBottomOf="@+id/destination_text" />
+
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/first_time_warning"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="12dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/estimated_time_warning"
+                android:drawableBottom="@drawable/ic_warning_on_surface_24dp"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="2dp"
+                android:scrollbars="none"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/second_time_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/destination_text" />
 
         <TextView
                 android:id="@+id/second_time_text"
-                android:textColor="?colorOnSurface"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/first_time_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:layout_marginBottom="6dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="?colorOnSurface"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintTop_toBottomOf="@+id/first_time_text" />
+
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/second_time_warning"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginEnd="12dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/estimated_time_warning"
+                android:drawableBottom="@drawable/ic_warning_on_surface_24dp"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="2dp"
+                android:scrollbars="none"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/first_time_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
