--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -118,23 +118,22 @@
                     app:layout_constraintTop_toTopOf="parent"/>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <TextView
+
+        <com.jorkoh.transportezaragozakt.destinations.stop_details.WrapWidthTextView
                 android:id="@+id/stop_details_no_data_text"
                 android:text="@string/no_data_available"
                 android:textColor="?colorOnBackground"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintWidth_default="wrap"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/stop_details_no_data_help"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/stop_details_no_data_animation"
-                android:visibility="gone"
-                android:layout_marginStart="8dp"
+                android:visibility="visible"
+                android:layout_marginStart="32dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Headline"
-                android:layout_marginEnd="4dp"
-                android:textAlignment="center"
+                android:gravity="center_horizontal"
                 app:layout_constraintHorizontal_bias="0.5"
                 android:layout_marginTop="32dp"/>
 
@@ -149,8 +148,8 @@
                 app:layout_constraintBottom_toBottomOf="@+id/stop_details_no_data_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/stop_details_no_data_text"
-                android:visibility="gone"
-                android:layout_marginEnd="8dp"/>
+                android:visibility="visible"
+                android:layout_marginEnd="32dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
