--- a/app/src/main/res/layout/main_container.xml
+++ b/app/src/main/res/layout/main_container.xml
@@ -26,6 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            app:itemTextAppearanceActive="@style/BaseTheme.CustomBottomNavigationViewText"
+            app:itemTextAppearanceInactive="@style/BaseTheme.CustomBottomNavigationViewText"
             app:menu="@menu/bottom_navigation_menu"/>
 
     <!-- SHADOW BUGS ON ANDROID 9 :( -->
