--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.card.MaterialCardView
-        xmlns:tools="http://schemas.android.com/tools"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/card_stop"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,86 +26,87 @@
 
         <ImageView
                 android:id="@+id/type_image_stop"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="@string/stop_type"
+                android:layout_width="54dp"
+                android:layout_height="54dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:contentDescription="@string/stop_type"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:id="@+id/title_text_stop"
-                android:textColor="?colorOnSurface"
+                android:id="@+id/title_stop"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/type_image_stop"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="2"
-                android:ellipsize="end"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toStartOf="@id/distance_text_stop"
-                android:textSize="14sp"/>
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                android:textColor="?colorOnSurface"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@id/distance_stop"
+                app:layout_constraintStart_toEndOf="@+id/type_image_stop"
+                app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+                android:id="@+id/distance_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="textEnd"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:textColor="?colorOnSurface"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="0"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <GridLayout
                 android:id="@+id/lines_layout_stop"
                 android:layout_width="0dp"
-                android:columnCount="7"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/type_image_stop"
-                app:layout_constraintTop_toBottomOf="@id/title_text_stop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:orientation="horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintEnd_toStartOf="@+id/favorite_icon_stop"
-                android:layout_marginEnd="8dp"/>
-
-        <TextView
-                android:id="@+id/distance_text_stop"
-                android:textColor="?colorOnSurface"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="6dp"
                 android:layout_marginEnd="8dp"
-                android:textAlignment="textEnd"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_weight="0"
-                android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+                android:layout_marginBottom="4dp"
+                android:columnCount="7"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/favorite_icon_stop"
+                app:layout_constraintStart_toEndOf="@id/type_image_stop"
+                app:layout_constraintTop_toBottomOf="@id/title_stop" />
 
         <ImageView
                 android:id="@+id/favorite_icon_stop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp"
+                android:contentDescription="@string/favorite_status"
                 android:src="@drawable/ic_favorite_border_black_24dp"
                 android:tint="?colorOnSurface"
-                app:layout_constraintStart_toEndOf="@id/lines_layout_stop"
-                app:layout_constraintEnd_toStartOf="@id/number_text_stop"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/favorite_status" />
+                app:layout_constraintEnd_toStartOf="@id/number_stop"
+                app:layout_constraintStart_toEndOf="@id/lines_layout_stop" />
 
         <TextView
-                android:id="@+id/number_text_stop"
-                android:textColor="?colorOnSurface"
+                android:id="@+id/number_stop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp"
+                android:minWidth="35dp"
                 android:textAlignment="textEnd"
-                android:layout_marginBottom="8dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:textColor="?colorOnSurface"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_weight="0"
-                android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
