Improved behavior of markers, now new trackers are followed when they update with a new position if selected. Fixed styling issue with cursor handler on search view, fixed crash related to fab animation on stop details

--- a/app/src/main/res/layout/map_destination.xml
+++ b/app/src/main/res/layout/map_destination.xml
@@ -16,7 +16,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ActionBarTheme"/>
+                android:theme="@style/CustomActionBarTheme"
+                style="@style/CustomActionBarStyle"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
