--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -18,9 +18,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
+                style="@style/CustomActionBarStyle"
                 app:titleEnabled="false"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-                android:theme="@style/ActionBarTheme">
+                android:theme="@style/CustomActionBarTheme">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:paddingTop="?attr/actionBarSize"
@@ -70,7 +71,8 @@
                     android:id="@id/fragment_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:theme="@style/ActionBarTheme"
+                    android:theme="@style/CustomActionBarTheme"
+                    style="@style/CustomActionBarStyle"
                     app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
