--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,13 @@
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
-    <style name="ActionBarTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+    <style name="CustomActionBarTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
         <item name="android:textColorPrimary">?colorOnPrimary</item>
-        <item name="android:background">?colorPrimary</item>
         <item name="android:textColorHint">?colorOnPrimary</item>
+    </style>
+
+    <style name="CustomActionBarStyle" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:background">?colorPrimary</item>
     </style>
 
     <style name="CustomChipChoiceBus" parent="@style/Widget.MaterialComponents.Chip.Choice">
@@ -61,7 +64,6 @@
         <item name="android:scrollbars">none</item>
         <item name="android:fontFamily">@font/manrope_medium</item>
         <item name="android:timePickerStyle">@style/CustomTimePickerTheme</item>
-        <item name="actionBarTheme">@style/ActionBarTheme</item>
         <item name="tabStyle">@style/CustomTabStyle</item>
         <item name="preferenceTheme">@style/BaseTheme.PreferenceThemeOverlay</item>
         <item name="colorBackgroundFloating">?android:colorBackground</item>
